# rtype

./: .gitignore  CMakeLists.txt  README.md  doxygen-config  installer.sh  uninstaller.sh  vcpkg.json
.github/workflows/: build-on-ubuntu.yml  cmake-multi-platform.yml  generate-doxygen.yml  ubuntu.yml
cmake/: auto-vcpkg.cmake  automate-vcpkg.cmake  nice-vcpkg.cmake
engine/: gloop.cpp
engine/events/: event_handler.cpp  event_handler.hpp
engine/include/: ECSManager.hpp  EngineInclude.hpp  Entity.hpp  Event.hpp  EventTemp.hpp  cross_config.hpp  gloop.hpp
engine/include/components/: AComponent.hpp  AnimationComponent.hpp  AudioComponent.hpp  CollisionComponent.hpp  GravityComponent.hpp  IComponent.hpp  LifeComponent.hpp  MonsterComponent.hpp  MonstreComponent.hpp  MovementComponent.hpp  NetworkComponent.hpp  PlayerComponent.hpp  PositionComponent.hpp  RenderComponent.hpp  SpriteComponent.hpp  StageComponent.hpp  TextComponent.hpp  WindowClearComponent.hpp  WindowComponent.hpp  WindowDisplayComponent.hpp  WindowRenderComponent.hpp
engine/include/config/: Config.hpp
engine/include/core/: AComponent.hpp  AEntity.hpp  ASystem.hpp  ECSManager.hpp  Engine.hpp  Entity.hpp  IComponent.hpp  IEvent.hpp  ISystem.hpp
engine/include/core/entities/: WindowEntity.hpp
engine/include/core/event/: EventBus.hpp  IEvent.hpp  MemberHandler.hpp
engine/include/core/eventBus/: AEventHandler.hpp  EventBus.hpp  MemberHandler.hpp
engine/include/entity/: WindowEntity.hpp
engine/include/event/: BlcEvent.hpp  ClientCollisionEvent.hpp  CollisionEvent.hpp  ConnectionEvent.hpp  DisconnectionEvent.hpp  EndEvent.hpp  EntityCreateEvent.hpp  EventRender.hpp  InputToServerEvent.hpp  MainLoopEvent.hpp  MoveClientEvent.hpp  MoveEvent.hpp  RecvMessageEventData.hpp  SendAllDataEvent.hpp  SendMessageEvent.hpp  SendMessageToAllEvent.hpp  SendMessageToAllExeptEvent.hpp  ShipAnimationEvent.hpp  StageEvent.hpp  StartEvent.hpp  StartStageEvent.hpp  moveEvent.hpp
engine/include/event/data/: CollisionInfoEvent.hpp  StopMainLoopEvent.hpp
engine/include/events/: MainLoopEvent.hpp  NoneEvent.hpp  StartEvent.hpp
engine/include/events/data/: InputInfoEvent.hpp  StopMainLoopEvent.hpp
engine/include/systems/: ASystem.hpp  AnimationSystem.hpp  AudioSystem.hpp  BackgroundSystem.hpp  EventSystem.hpp  GravitySystem.hpp  ISystem.hpp  InputSystem.hpp  InputToServerSystem.hpp  MovementSystem.hpp  NetworkSystem.hpp  RecvMessageServerSystem.hpp  RecvMessageSystem.hpp  RecvNetworkSystem.hpp  RenderSystem.hpp  SendNetworkSystem.hpp  ShipAnimationSystem.hpp  ShootEntityClientSystem.hpp  ShootEntitySystem.hpp  WindowClearSystem.hpp  WindowDisplaySystem.hpp
engine/include/utils/: AssetFinder.hpp
engine/networking/: server_socket.cpp  server_socket.hpp  socket.cpp  socket.hpp
engine/serializer/: serializer.cpp  serializer.h  serializer.hpp
engine/source/: gloop.cpp  main.cpp
engine/source/components/: RenderComponent.cpp  SpriteComponent.cpp  TextComponent.cpp  WindowClearComponents.cpp
engine/source/config/: Config.cpp
engine/source/core/: AComponent.cpp  ASystem.cpp  ECSManager.cpp  Entity.cpp
engine/source/core/event/: AEventHandler.cpp  ShipAnimationEvent.cpp  StartEvent.cpp
engine/source/entity/: WindowEntity.cpp
engine/source/systems/: AnimationSystem.cpp  AudioSystem.cpp  GravitySystem.cpp  InputSystem.cpp  RecvMessageSystem.cpp  RenderSystem.cpp  ShipAnimationSystem.cpp  WindowClearSystem.cpp  WindowDisplaySystem.cpp
engine/source/utils/: AssetFinder.cpp
engine/src/components/: AnimationComponent.cpp  AudioComponent.cpp  SpriteComponent.cpp  TextComponent.cpp
engine/src/core/: AComponent.cpp  AEntity.cpp  ASystem.cpp  ECSManager.cpp  Engine.cpp
engine/src/core/entities/: WindowEntity.cpp
engine/src/core/eventBus/: AEventHandler.cpp
engine/src/events/: AdjustWindowRatioEvent.cpp  MainLoopEvent.cpp  StartEvent.cpp
engine/src/systems/: AnimationSystem.cpp  AudioSystem.cpp  InputSystem.cpp  RenderSystem.cpp
engine/tests/: main.cpp
engine/threading/: thread_pool.cpp  thread_pool.hpp
r-type/client/include/: ClientInclude.hpp  Core.hpp  Lobby.hpp  Parameters.hpp  Tools.hpp  client_config.hpp
r-type/client/include/components/: staticMoveComponent.hpp
r-type/client/include/events/: ClientCollisionEvent.hpp  InputToServerEvent.hpp  MoveClientEvent.hpp
r-type/client/include/systems/: BackgroundSystem.hpp  InputToServerSystem.hpp  MoveClientEntitySystem.hpp  RecvMessageSystem.hpp  ShipAnimationSystem.hpp  ShootEntityClientSystem.hpp
r-type/client/src/: ClientNetwork.cpp  Parameters.cpp  client.cpp  main.cpp  network.cpp
r-type/client/src/lobby/: title_screen.cpp
r-type/client/src/systems/: RecvMessageSystem.cpp  ShipAnimationSystem.cpp
r-type/client/src/tools/: AssetFinder.cpp  adjustAspectWithBlackBars.cpp
r-type/client/tests/: hello.cpp
r-type/config/: config.cfg
r-type/include/: cross_config.hpp  game_config.hpp
r-type/server/config/: stage_1.cfg
r-type/server/include/: ServerInclude.hpp  server_config.hpp
r-type/server/include/components/: StageComponent.hpp
r-type/server/include/events/: CollisionEvent.hpp  ConnectionEvent.hpp  DisconnectionEvent.hpp  EntityCreateEvent.hpp  HurdleCreationEvent.hpp  MonsterCreationEvent.hpp  MoveEvent.hpp  MoveServerEvent.hpp  SendAllDataEvent.hpp  SendMessageToAllEvent.hpp  SendMessageToAllExeptEvent.hpp  SendStartToServer.hpp  StageEvent.hpp  StartStageEvent.hpp
r-type/server/include/systems/: MoveServerEntitySystem.hpp  RecvMessageServerSystem.hpp  ShootEntitySystem.hpp
r-type/server/src/: ServerNetwork.cpp  main.cpp  network.cpp  server.cpp
r-type/server/src/systems/: RecvMessageServerSystem.cpp
r-type/server/tests/: hello.cpp  test_serializer.cpp
r-type/shared/config/: destroyable_hurdle.cfg  enemies.cfg  hurdle.cfg
r-type/shared/include/: SharedInclude.hpp  StageParsingInfo.hpp
r-type/shared/include/components/: MonstreComponent.hpp  MovementComponent.hpp  PlayerComponent.hpp  ShootComponent.hpp
r-type/shared/include/cross/: Config.hpp
r-type/shared/include/events/: SendMessageEvent.hpp
(+3 files in other folders)
